# isaac_bin_picking

./: Change_the_lighting from_Stage_lights_to_Default_before_running_the_simulation.txt  README.md  bin_picking_sim.usd  packages_installation_and_other_commands.txt
foundationPose/: run_ros.py  run_ros_test.py
foundationPose/demo_data/bolt/: cam_K.txt
isaac_assets/bolt_obj/: bolt.usd
isaac_assets/bolt_stand/: bolt_stand.usd
isaac_assets/dish/: dish.usd
src/bin_packing_manipulation/: CMakeLists.txt  package.xml
src/bin_packing_manipulation/launch/: move_arm.launch.py
src/bin_packing_manipulation/meshes/: bolt_stand.stl  dish.stl
src/bin_packing_manipulation/src/: bin_picking.cpp
src/panda_description/: package.xml
src/panda_description/urdf/: panda.urdf  panda.urdf.xacro
src/panda_description/urdf/panda/configuration/: panda_physics.usd
src/panda_moveit_config/config/: panda.srdf
src/panda_moveit_config/launch/: demo.launch.py
yolo/: yolov11_seg_inference.py  yolov11_seg_train.py
yolo/datasets/bolts_dataset/: dataset.yaml
yolo/datasets/bolts_dataset/labels/: train.cache  val.cache
yolo/datasets/bolts_dataset/labels/train/: img11_519a5116.txt  img13_ddb1fb61.txt  img14_ad92f088.txt  img15_3c9da46d.txt  img17_2534d9b5.txt  img19_798a4f12.txt  img1_9d05fa50.txt  img20_c0d1fc73.txt  img21_2cf3578a.txt  img23_b77c7d92.txt  img24_16bcfad5.txt  img25_a4086bc5.txt  img2_9acdd622.txt  img4_290b396e.txt  img6_35a21914.txt  img7_96ffe7bb.txt  img8_3cece4a5.txt  img9_ecaa280e.txt
yolo/training_data_json/: img1.json  img10.json  img11.json  img12.json  img13.json  img14.json  img15.json  img17.json  img18.json  img19.json  img2.json  img20.json  img21.json  img22.json  img23.json  img24.json  img25.json  img3.json  img4.json  img5.json  img6.json  img7.json  img8.json  img9.json
(+6 files in other folders)
